--- a/index.html
+++ b/index.html
@@ -181,3 +181,5 @@
 
     _Full_Update();
 </script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1282485383646277" crossorigin="anonymous"></script>
