--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <select id="_Episode">
 
         </select>
+
+        <div class="powr-paypal-button" id="1b4de8b7_1671687326"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
     </div>
 
     <footer>
