--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/default.css">
-    <title>LOTUS</title>
+    <title>EmpireZ - Streaming & More</title>
 </head>
 
 <body>
     <header>
-        <h1>Lotus</h1>
+        <h1>~EmpireZ~</h1>
     </header>
 
     <main>
@@ -31,6 +31,13 @@
 
         </select>
     </div>
+
+    <footer>
+        <h2>~ EmpireZ ~</h2>
+        <h4>
+            Email: creynolds1126.2006@gmail.com
+        </h4>
+    </footer>
 </body>
 
 </html>
